Set mobile nav bar to have position: absolute to prevent shifting of content on expansion, for a better mobile experience

--- a/src/components/NavBarMobile/NavBarMobile.css
+++ b/src/components/NavBarMobile/NavBarMobile.css
@@ -5,6 +5,7 @@
     justify-content: flex-start;
     align-items: center;
     background: #070B0F;
+    position: absolute;
     right: 0;
     top: 0;
     border-radius: 20px 0px 0px 20px;
